Change app name to 'Time Progress'

--- a/podfile
+++ b/podfile
@@ -1,4 +1,4 @@
-target 'Year Progress' do
+target 'Time Progress' do
   use_frameworks!
   pod 'Cartography', '~> 3.0'
   pod 'ProgressKit', :git => "https://github.com/kaunteya/ProgressKit.git"
